	* deprecate add_torrent_params::url field. use parse_magnet_uri instead
	* optimize download queue management
	* deprecated (undocumented) file:// urls
	* add limit for number of web seed connections
	* added support for retrieval of DHT live nodes
	* complete UNC path support
	* add packets pool allocator
	* fix last_upload and last_download overflow after 9 hours in past
	* python binding add more add_torrent_params fields and an invalid key check
	* introduce introduce distinct types for peer_class_t, piece_index_t and
	  file_index_t.
	* fix crash caused by empty bitfield
	* removed disk-access-log build configuration
	* removed mmap_cache feature
	* strengthened type safety in handling of piece and file indices
	* deprecate identify_client() and fingerprint type
	* make sequence number for mutable DHT items backed by std::int64_t
	* tweaked storage_interface to have stronger type safety
	* deprecate relative times in torrent_status, replaced by std::chrono::time_point
	* refactor in alert types to use more const fields and more clear API
	* changed session_stats_alert counters type to signed (std::int64_t)
	* remove torrent eviction/ghost torrent feature
	* include target in DHT lookups, when queried from the session
	* improve support for HTTP redirects for web seeds
	* use string_view in entry interface
	* deprecate "send_stats" property on trackers (since lt_tracker extension has
	  been removed)
	* remove deprecate session_settings API (use settings_pack instead)
	* improve file layout optimization when creating torrents with padfiles
	* remove remote_dl_rate feature
	* source code migration from boost::shared_ptr to std::shared_ptr
	* storage_interface API changed to use span and references
	* changes in public API to work with std::shared_ptr<torrent_info>
	* extensions API changed to use span and std::shared_ptr
	* plugin API changed to handle DHT requests using string_view
	* removed support for lt_trackers and metadata_transfer extensions