@@ -37,6 +37,7 @@ POSSIBILITY OF SUCH DAMAGE.
 #include "libtorrent/config.hpp"
 #include "libtorrent/torrent_handle.hpp"
 #include "libtorrent/add_torrent_params.hpp"
+#include "libtorrent/string_view.hpp"
 
 namespace libtorrent
 {
@@ -77,7 +78,7 @@ namespace libtorrent
 
 	// This function parses out information from the magnet link and populates the
 	// add_torrent_params object.
-	TORRENT_EXPORT void parse_magnet_uri(std::string const& uri, add_torrent_params& p, error_code& ec);
+	TORRENT_EXPORT void parse_magnet_uri(string_view uri, add_torrent_params& p, error_code& ec);
 }
 
 #endif
